# Phasis

./: .gitignore  .phasis.runtime.json  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
docs/: handoff.md
phasis/: __init__.py  cache.py  cli.py  config.py  deps_check.py  env.py  fastq.py  ids.py  libprep.py  parallel.py  pipeline.py  runtime.py  samtools.py  state.py
phasis.egg-info/: PKG-INFO  SOURCES.txt
phasis/stages/: candidates_merge.py  classify.py  cluster_aggregation.py  cluster_build.py  cluster_scoring.py  dependency_check.py  feature_assembly.py  indexing.py  input_validation.py  library_processing.py  locus_plots.py  mapping.py  output.py  phas_clusters.py  phase2_pipeline.py  sam_parsing.py  window_scoring.py  window_selection.py
support_scripts/: debug_main_partner_panel.py  fastqToTag.py  phasMatch.py
tests/: test_classification_evidence.py  test_classification_qc.py  test_cli_class_mode.py  test_cluster_aggregation.py  test_cluster_scoring_batched.py  test_compressed_artifacts.py  test_fastq_processing.py  test_feature_assembly_parallel.py  test_howell_ambiguity.py  test_locus_plots.py  test_memfile_defaults.py  test_parallel.py  test_phas_clusters_batched.py  test_phase2_memory_handoff.py  test_processed_library_cache.py  test_reference_id_mode.py  test_samtools.py  test_versioning.py
