[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phasis"
version = "2.7"
description = "PHAS locus detection and scoring pipeline"
authors = [{ name = "Thales H Cherubino Ribeiro, Atul Kakrana, Blake C. Meyers" }]
requires-python = ">=3.10"

dependencies = [
  "numpy==1.26.4",
  "pandas",
  "scipy",
  "scikit-learn==1.3.0",
  "matplotlib",
  "seaborn",
  "joblib",
  "tqdm",
]

[project.scripts]
phasis = "phasis.cli:main"

[tool.setuptools]
packages = ["phasis", "phasis.stages"]

[tool.setuptools.package-data]
"phasis" = ["data/*.pkl"]
